Archive2/9e/7594e66db31403/output
main.cpp:32:20: error: call to 'SmartEquals' is ambiguous
      std::cout << SmartEquals(a, b) << std::endl;
                   ^~~~~~~~~~~
main.cpp:43:5: note: in instantiation of function template specialization 'PrintEquality<bool, bool>' requested here
    PrintEquality(True, True2);
    ^
main.cpp:14:8: note: candidate function [with T = bool]
  bool SmartEquals(const T& expected, const T& actual,
       ^
main.cpp:20:8: note: candidate function [with T = bool, Ignore = <>]
  bool SmartEquals(const T& expected, const T& actual,
       ^
1 error generated.
